fixed icon display and uneven spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -14,10 +14,11 @@ window#waybar {
     padding: 0 5px;
     background: transparent;
     color: #fbf1c7;
+    border-bottom: 2px solid #282828;
 }
 
 #workspaces button.active {
-    border-bottom: 3px solid #fe8019;
+    border-bottom: 2px solid #fe8019;
 }
 
 #workspaces button.urgent {
@@ -47,7 +48,7 @@ window#waybar {
 #memory,
 #battery,
 #clock {
-    border-bottom: 3px solid #fe8019;
+    border-bottom: 2px solid #fe8019;
 }
 
 /* Module-specific colors */
